# odoo-devkit-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
src/odoo_devkit/: __init__.py  config.py  constants.py  dashboard.py  server.py  tool_definitions.py  tool_handlers.py  utils.py
src/odoo_devkit/handlers/: __init__.py  actions_menus.py  helpers.py  model.py  modules.py  recursive.py  rpc.py  scaffold.py  search.py  security.py  upgrade.py  validate.py  views.py  workflows.py  xml_id.py
src/odoo_devkit/resources/dashboard/: dashboard.css  dashboard.js  index.html
