[project]
name = "odoo-devkit"
version = "0.1.0"
description = "Token-efficient MCP server for Odoo 17/18/19 development — code search, model analysis, view navigation, scaffolding, and XML validation"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["odoo", "mcp", "development", "ai", "lsp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.23.0",
    "toons>=0.5.3",
    "flask>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/VatsalChauhan36/odoo-devkit"
Repository = "https://github.com/VatsalChauhan36/odoo-devkit"
Issues = "https://github.com/VatsalChauhan36/odoo-devkit/issues"

[project.scripts]
odoo-devkit = "odoo_devkit:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ruff>=0.8.0",
]
